add pdb for each controller

--- a/clusters/my-cluster/flux-system/kustomization.yaml
+++ b/clusters/my-cluster/flux-system/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+- gotk-pdb.yaml
 patchesStrategicMerge:
 - gotk-patches.yaml
