--- a/clusters/my-cluster/flux-system/helm-release.yaml
+++ b/clusters/my-cluster/flux-system/helm-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: redis
-  namespace: flux-system
+  namespace: redis
 spec:
   interval: 5m
   chart:
