ignore replicas change

--- a/clusters/my-cluster/flux-system/helm-release.yaml
+++ b/clusters/my-cluster/flux-system/helm-release.yaml
@@ -7,6 +7,8 @@ spec:
   interval: 1m
   driftDetection:
     mode: warn
+    ignore:
+      - paths: ["/spec/replicas"]
   chart:
     spec:
       chart: redis
