--- a/clusters/my-cluster/flux-system/helm-release.yaml
+++ b/clusters/my-cluster/flux-system/helm-release.yaml
@@ -6,11 +6,14 @@ metadata:
 spec:
   interval: 1m
   driftDetection:
-    mode: warn
+    mode: enabled
+    ignore: 
+      - paths:
+          - "/spec/replicas"
   chart:
     spec:
       chart: redis
-      version: "17.11.5" # Specify your desired version
+      version: "17.11.6" # Specify your desired version
       sourceRef:
         kind: HelmRepository
         name: bitnami
