--- a/clusters/my-cluster/flux-system/helm-release-2.yaml
+++ b/clusters/my-cluster/flux-system/helm-release-2.yaml
@@ -1,13 +1,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: redis
+  name: redis-2
   namespace: redis
 spec:
   interval: 1m
   chart:
     spec:
-      chart: redis-2
+      chart: redis
       version: "17.11.6" # Specify your desired version
       sourceRef:
         kind: HelmRepository
