--- a/clusters/my-cluster/flux-system/helm-release-2.yaml
+++ b/clusters/my-cluster/flux-system/helm-release-2.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: redis-2
-  namespace: redis
+  namespace: redis-2
 spec:
   interval: 1m
   chart:
