--- a/clusters/my-cluster/flux-system/helm-release-patches.yaml
+++ b/clusters/my-cluster/flux-system/helm-release-patches.yaml
@@ -1,6 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
+  name: all-helm-release
 spec:
   driftDetection:
     mode: warn
