enable drift correction

--- a/clusters/my-cluster/flux-system/helm-release-patches.yaml
+++ b/clusters/my-cluster/flux-system/helm-release-patches.yaml
@@ -4,7 +4,7 @@ metadata:
   name: all-helm-release
 spec:
   driftDetection:
-    mode: warn
+    mode: enabled
     ignore:
       - paths:
           - "/spec/replicas"
