changed path for tenants and infrastructures

--- a/clusters/my-cluster/infrastructure.yaml
+++ b/clusters/my-cluster/infrastructure.yaml
@@ -8,5 +8,5 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ../infrastructure/applications
+  path: ./clusters/infrastructure/applications
   prune: true
