enable warn mode drift detection for tenants and infrastructures

--- a/clusters/my-cluster/infrastructure.yaml
+++ b/clusters/my-cluster/infrastructure.yaml
@@ -10,3 +10,17 @@ spec:
     name: flux-system
   path: ./clusters/infrastructure/applications
   prune: true
+  patches:
+    - target:
+        kind: HelmRelease
+      patch: |-
+        apiVersion: helm.toolkit.fluxcd.io/v2beta1
+        kind: HelmRelease
+        metadata:
+          name: all-helm-release
+        spec:
+          driftDetection:
+            mode: warn
+            ignore:
+              - paths:
+                  - "/spec/replicas"
