--- a/clusters/tenants/applications/kustomization.yaml
+++ b/clusters/tenants/applications/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./redis
-  - ./nginx
+  - app01
+patches:
+  - path: app01-patch.yaml
