--- a/clusters/tenants/applications/app01/sync.yaml
+++ b/clusters/tenants/applications/app01/sync.yaml
@@ -9,7 +9,7 @@ spec:
   secretRef:
     name: flux-system
   ref:
-    branch: master
+    branch: main
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
