--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -14,15 +14,20 @@ spec:
   prune: true
   patches:
     - target:
-        kind: HelmRelease
+        kind: Kustomization
       patch: |-
-        apiVersion: helm.toolkit.fluxcd.io/v2beta1
-        kind: HelmRelease
-        metadata:
-          name: all-helm-release
-        spec:
-          driftDetection:
-            mode: warn
-            ignore:
-              - paths:
-                  - "/spec/replicas"
+        spec: 
+          patches:
+            - target:
+                kind: HelmRelease
+              patch: |-
+                apiVersion: helm.toolkit.fluxcd.io/v2beta1
+                kind: HelmRelease
+                metadata:
+                  name: all-helm-release
+                spec:
+                  driftDetection:
+                    mode: warn
+                    ignore:
+                      - paths:
+                          - "/spec/replicas"
