--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -16,6 +16,10 @@ spec:
     - target:
         kind: Kustomization
       patch: |-
+        apiVersion: helm.toolkit.fluxcd.io/v1
+        kind: Kustomization
+        metadata:
+          name: all-kustomization
         spec: 
           patches:
             - target:
