--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -31,7 +31,7 @@ spec:
                   name: all-helm-release
                 spec:
                   driftDetection:
-                    mode: enabled
+                    mode: warn
                     ignore:
                       - paths:
                           - "/spec/replicas"
