add resources path for ignore rule

--- a/clusters/my-cluster/infrastructure.yaml
+++ b/clusters/my-cluster/infrastructure.yaml
@@ -24,3 +24,4 @@ spec:
             ignore:
               - paths:
                   - "/spec/replicas"
+                  - "/spec/template/spec/containers/*/resources"
