--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -35,3 +35,4 @@ spec:
                     ignore:
                       - paths:
                           - "/spec/replicas"
+                          - "/spec/template/spec/containers/*/resources"
