--- a/clusters/tenants/applications/kustomization.yaml
+++ b/clusters/tenants/applications/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - app01
+  - app02
 patches:
   - path: app01-patch.yaml
+  - path: app02-patch.yaml
