add ignore rule for HPA

--- a/clusters/my-cluster/infrastructure.yaml
+++ b/clusters/my-cluster/infrastructure.yaml
@@ -25,3 +25,7 @@ spec:
               - paths:
                   - "/spec/replicas"
                   - "/spec/template/spec/containers/0/resources"
+              - paths:
+                  - "/spec/metrics"
+                target:
+                  kind: HorizontalPodAutoscaler
