--- a/clusters/my-cluster/infrastructure.yaml
+++ b/clusters/my-cluster/infrastructure.yaml
@@ -41,5 +41,8 @@ spec:
                   - "/spec/template/spec/containers/9/resources"
               - paths:
                   - "/spec/metrics"
+                  - "/spec/minReplicas"
+                  - "/spec/maxReplicas"
+                  - "/spec/behavior"
                 target:
                   kind: HorizontalPodAutoscaler
