--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -52,5 +52,8 @@ spec:
                           - "/spec/template/spec/containers/9/resources"
                       - paths:
                           - "/spec/metrics"
+                          - "/spec/minReplicas"
+                          - "/spec/maxReplicas"
+                          - "/spec/behavior"
                         target:
                           kind: HorizontalPodAutoscaler
