--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -24,36 +24,4 @@ spec:
           patches:
             - target:
                 kind: HelmRelease
-              patch: |-
-                apiVersion: helm.toolkit.fluxcd.io/v2beta1
-                kind: HelmRelease
-                metadata:
-                  name: all-helm-release
-                spec:
-                  driftDetection:
-                    mode: enabled
-                    ignore:
-                      - paths:
-                          - "/spec/replicas"
-                          - "/spec/template/spec/initContainers/0/resources"
-                          - "/spec/template/spec/initContainers/1/resources"
-                          - "/spec/template/spec/initContainers/2/resources"
-                          - "/spec/template/spec/initContainers/3/resources"
-                          - "/spec/template/spec/initContainers/4/resources"
-                          - "/spec/template/spec/containers/0/resources"
-                          - "/spec/template/spec/containers/1/resources"
-                          - "/spec/template/spec/containers/2/resources"
-                          - "/spec/template/spec/containers/3/resources"
-                          - "/spec/template/spec/containers/4/resources"
-                          - "/spec/template/spec/containers/5/resources"
-                          - "/spec/template/spec/containers/6/resources"
-                          - "/spec/template/spec/containers/7/resources"
-                          - "/spec/template/spec/containers/8/resources"
-                          - "/spec/template/spec/containers/9/resources"
-                      - paths:
-                          - "/spec/metrics"
-                          - "/spec/minReplicas"
-                          - "/spec/maxReplicas"
-                          - "/spec/behavior"
-                        target:
-                          kind: HorizontalPodAutoscaler
+                path: ../shared/helm-release-patch.yaml
