--- a/clusters/my-cluster/tenants.yaml
+++ b/clusters/my-cluster/tenants.yaml
@@ -24,4 +24,4 @@ spec:
           patches:
             - target:
                 kind: HelmRelease
-                path: ../shared/helm-release-patch.yaml
+                path: ./shared/helm-release-patch.yaml
